HW06 basic tasks check 3 + Save Roles with User